--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -97,7 +97,8 @@
             android:layout_margin="10dp"
             app:chipSpacingHorizontal="0dp"
             app:layout_constraintTop_toBottomOf="@id/textViewChooseColor"
-            tools:layout_editor_absoluteX="10dp">
+            tools:layout_editor_absoluteX="10dp"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
                 android:layout_width="wrap_content"
@@ -123,22 +124,33 @@
             <com.google.android.material.chip.Chip
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                
+
                 app:chipBackgroundColor="@color/purple_200"
                 app:chipCornerRadius="20dp" />
         </com.google.android.material.chip.ChipGroup>
 
         <TextView
-            android:id="@+id/textViewChooseSize"
-            android:layout_width="match_parent"
+            android:id="@+id/textViewSize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+
+            android:text="@string/size"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/chipGroupChooseColor"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/textViewTableSize"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
             android:layout_margin="10dp"
             android:text="@string/table_size"
 
 
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/blue"
+            app:layout_constraintStart_toEndOf="@id/textViewSize"
             app:layout_constraintTop_toBottomOf="@id/chipGroupChooseColor" />
 
         <com.google.android.material.chip.ChipGroup
@@ -147,8 +159,9 @@
             android:layout_height="0dp"
             app:chipSpacingHorizontal="0dp"
             android:layout_margin="10dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewChooseSize"
-            tools:layout_editor_absoluteX="10dp">
+            app:layout_constraintTop_toBottomOf="@id/textViewTableSize"
+            tools:layout_editor_absoluteX="10dp"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
                 android:layout_width="wrap_content"
