--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,18 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.Splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/splash</item>
+        <item name="colorPrimaryVariant">@color/splash</item>
+        <item name="colorOnPrimary">@color/splash</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/splash</item>
+        <item name="colorSecondaryVariant">@color/splash</item>
+        <item name="colorOnSecondary">@color/splash</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/splash</item>
+        <!-- Customize your theme here. -->
+    </style>
 </resources>
