add logo search

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="yellow">#FFEB3B</color>
     <color name="blue">#0384F4</color>
     <color name="splash">#6300897B</color>
+    <color name="grey">#63B5B8B8</color>
 
 </resources>
