--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,13 +7,38 @@
     tools:context=".ui.home.HomeFragment">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewLogo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Home fragment"
-        android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        android:text="@string/app_name"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:fontFamily="@font/futura_book"
+        android:textColor="@color/black"
+
+        android:background="@color/splash"/>
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewLogo"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="10dp"
+
+        android:queryHint="@string/search"
+        android:background="@drawable/seach_view_background"
+        android:inputType="text"
+        android:iconifiedByDefault="false"
+        />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
