--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,10 +35,226 @@
         android:queryHint="@string/search"
         android:background="@drawable/seach_view_background"
         android:inputType="text"
-        android:iconifiedByDefault="false"
-        />
+        android:iconifiedByDefault="false"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
+            <FrameLayout
+                android:id="@+id/frameCostume"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewCostume"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/costumes"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/costume"/>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/frameCoat"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/frameCostume"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewCoat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/coat"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/coat"/>
+            </FrameLayout>
+<!---->
+<!---->
+            <FrameLayout
+                android:id="@+id/frameShoes"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameCostume"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewShoes"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/shoes"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/shoes"/>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/frameJacket"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/frameShoes"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewJacket"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/jacket"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/jacket"/>
+            </FrameLayout>
+<!--            -->
+<!--            -->
+
+            <FrameLayout
+                android:id="@+id/frameTrikotaj"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameShoes"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewTrikotaj"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/trikotaj"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/trikotaj"/>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/frameSwimSuit"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/frameTrikotaj"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewSwimSuit"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/swim_suit"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/swim"/>
+            </FrameLayout>
+
+
+<!--            -->
+<!--            -->
+
+            <FrameLayout
+                android:id="@+id/frameHomeWear"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameTrikotaj"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewHomeWear"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/home_wear"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/home"/>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/frameMarina"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/frameHomeWear"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey">
+
+
+                <TextView
+                    android:id="@+id/textViewMarina"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:text="@string/marina"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="35dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"/>
+            </FrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
