--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -252,6 +252,21 @@
                     android:gravity="center"
                     android:paddingStart="10dp"/>
             </FrameLayout>
+
+            <TextView
+                android:id="@+id/textViewNew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/frameHomeWear"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="50dp"
+
+                android:text="@string/new_clothes"
+                android:textSize="36dp"
+                android:fontFamily="@font/pt_root_bold"
+                android:textColor="@color/semi_black"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
