--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="blue">#0384F4</color>
     <color name="splash">#6300897B</color>
     <color name="grey">#63B5B8B8</color>
+    <color name="semi_black">#323540</color>
+    <color name="grey_2">#CDCFD6</color>
 
 </resources>
