--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,13 +53,13 @@
 
             <FrameLayout
                 android:id="@+id/frameCostume"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:background="@color/grey">
+                android:background="@color/grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
 
                 <TextView
@@ -67,23 +67,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/costumes"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/costume"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/costume"/>
+                    android:text="@string/costumes"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/frameCoat"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameCostume"
-                android:layout_marginEnd="20dp"
-                android:background="@color/grey">
+                app:layout_constraintTop_toTopOf="@id/frameCostume">
 
 
                 <TextView
@@ -91,25 +91,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/coat"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/coat"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/coat"/>
+                    android:text="@string/coat"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
-<!---->
-<!---->
+            <!---->
+            <!---->
             <FrameLayout
                 android:id="@+id/frameShoes"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameCostume"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:background="@color/grey">
+                android:background="@color/grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameCostume">
 
 
                 <TextView
@@ -117,23 +117,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/shoes"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/shoes"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/shoes"/>
+                    android:text="@string/shoes"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/frameJacket"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameShoes"
-                android:layout_marginEnd="20dp"
-                android:background="@color/grey">
+                app:layout_constraintTop_toTopOf="@id/frameShoes">
 
 
                 <TextView
@@ -141,26 +141,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/jacket"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/jacket"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/jacket"/>
+                    android:text="@string/jacket"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
-<!--            -->
-<!--            -->
+            <!--            -->
+            <!--            -->
 
             <FrameLayout
                 android:id="@+id/frameTrikotaj"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameShoes"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:background="@color/grey">
+                android:background="@color/grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameShoes">
 
 
                 <TextView
@@ -168,23 +168,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/trikotaj"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/trikotaj"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/trikotaj"/>
+                    android:text="@string/trikotaj"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/frameSwimSuit"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameTrikotaj"
-                android:layout_marginEnd="20dp"
-                android:background="@color/grey">
+                app:layout_constraintTop_toTopOf="@id/frameTrikotaj">
 
 
                 <TextView
@@ -192,28 +192,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/swim_suit"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/swim"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/swim"/>
+                    android:text="@string/swim_suit"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
 
 
-<!--            -->
-<!--            -->
+            <!--            -->
+            <!--            -->
 
             <FrameLayout
                 android:id="@+id/frameHomeWear"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/frameTrikotaj"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:background="@color/grey">
+                android:background="@color/grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameTrikotaj">
 
 
                 <TextView
@@ -221,23 +221,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:text="@string/home_wear"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textSize="30dp"
+                    android:background="@drawable/home"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="@drawable/home"/>
+                    android:text="@string/home_wear"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
             </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/frameMarina"
-                android:layout_width="180dp"
-                android:layout_height="150dp"
+                android:layout_width="170dp"
+                android:layout_height="110dp"
+                android:layout_marginEnd="15dp"
+                android:background="@color/grey"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/frameHomeWear"
-                android:layout_marginEnd="20dp"
-                android:background="@color/grey">
+                app:layout_constraintTop_toTopOf="@id/frameHomeWear">
 
 
                 <TextView
@@ -245,63 +245,63 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
+                    android:gravity="center"
+                    android:paddingStart="10dp"
                     android:text="@string/marina"
-                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="35dp"
-                    android:gravity="center"
-                    android:paddingStart="10dp"/>
+                    android:textStyle="bold" />
             </FrameLayout>
 
             <TextView
                 android:id="@+id/textViewNew"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/frameHomeWear"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="50dp"
-
-                android:text="@string/new_clothes"
-                android:textSize="36dp"
                 android:fontFamily="@font/pt_root_bold"
-                android:textColor="@color/semi_black" />
+                android:text="@string/new_clothes"
+                android:textColor="@color/semi_black"
+
+                android:textSize="36dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frameHomeWear" />
 
             <ScrollView
                 android:id="@+id/scrollViewNewCollection"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:background="@color/grey_2"
                 android:layout_marginTop="15dp"
+                android:background="@color/grey_2"
 
-                app:layout_constraintTop_toBottomOf="@id/textViewNew"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/textViewNew" />
 
             <TextView
                 android:id="@+id/textViewSales"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/scrollViewNewCollection"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="50dp"
-
-                android:text="@string/sales"
-                android:textSize="36dp"
                 android:fontFamily="@font/pt_root_bold"
-                android:textColor="@color/semi_black" />
+                android:text="@string/sales"
+                android:textColor="@color/semi_black"
+
+                android:textSize="36dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/scrollViewNewCollection" />
 
             <ScrollView
                 android:id="@+id/scrollViewNewSales"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:background="@color/grey_2"
                 android:layout_marginTop="15dp"
+                android:background="@color/grey_2"
 
-                app:layout_constraintTop_toBottomOf="@id/textViewSales"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/textViewSales" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
