--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -225,6 +225,31 @@
             tools:text="@tools:sample/lorem/random"
             android:textColor="@color/black"/>
 
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="24dp"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            android:background="@color/grey_2"
+
+            android:text="NEW"
+            android:textSize="24dp"
+            android:gravity="center"
+            android:fontFamily="@font/pt_root_bold" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toTopOf="@id/textViewBrend"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="30dp"
+            android:background="@color/white"
+
+            android:src="@drawable/ic_favorite_empty"/>
 
 
 
