--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,16 +26,16 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewLogo"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="10dp"
-
-        android:queryHint="@string/search"
         android:background="@drawable/seach_view_background"
+        android:iconifiedByDefault="true"
         android:inputType="text"
-        android:iconifiedByDefault="false"/>
+
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewLogo"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -267,8 +267,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/frameHomeWear" />
 
-            <ScrollView
-                android:id="@+id/scrollViewNewCollection"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewNewCollection"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="15dp"
@@ -290,7 +290,7 @@
                 android:textSize="36dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/scrollViewNewCollection" />
+                app:layout_constraintTop_toBottomOf="@id/recyclerViewNewCollection" />
 
             <ScrollView
                 android:id="@+id/scrollViewNewSales"
