--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -270,9 +270,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewNewCollection"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:background="@color/grey_2"
+                android:background="#DDDEE1"
+                android:layout_marginHorizontal="10dp"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
