--- a/app/src/main/res/layout/item_card_sales.xml
+++ b/app/src/main/res/layout/item_card_sales.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/splash">
+        android:background="@drawable/gradient">
 
 
 
