--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.goods.GoodsFragment">
+    tools:context=".ui.goods.GoodsFragment"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
