--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.logo.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_goodsFragment"
+            app:destination="@id/goodsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/cardFragment"
         android:name="com.example.logo.ui.card.CardFragment"
