--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -8,21 +8,67 @@
     tools:context=".ui.category.CategoryFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:elevation="4dp"
+            android:layout_height="60dp"
             app:layout_scrollFlags="scroll|enterAlways">
 
-        </androidx.appcompat.widget.Toolbar>
+            <TextView
+                android:id="@+id/tvBack"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/tvSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Категория"
+
+                android:textColor="@color/black"
+
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tvBack"
+                app:layout_constraintStart_toEndOf="@id/tvBack"
+                app:layout_constraintTop_toTopOf="@+id/tvBack" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="30dp"
+
+                android:layout_height="30dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_sort"
+                app:layout_constraintBottom_toBottomOf="@id/tvBack"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvBack" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="15dp"
+
+                android:background="@drawable/ic_search"
+
+                android:textColor="@color/black"
+
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tvBack"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="@+id/tvBack" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -30,7 +76,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+        android:layout_margin="10dp" />
+
+
 
 
 
