--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -118,38 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="10dp"
-            app:chipSpacingHorizontal="0dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewChooseColor"
-            tools:layout_editor_absoluteX="10dp"
-            app:singleSelection="true">
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-
-                app:chipBackgroundColor="@color/black"
-                app:chipCornerRadius="20dp" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-
-                app:chipBackgroundColor="@color/red"
-                app:chipCornerRadius="20dp" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-
-                app:chipBackgroundColor="@color/yellow"
-                app:chipCornerRadius="20dp" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-
-                app:chipBackgroundColor="@color/purple_200"
-                app:chipCornerRadius="20dp" />
+            app:layout_constraintTop_toBottomOf="@id/textViewChooseColor">
         </com.google.android.material.chip.ChipGroup>
 
         <TextView
@@ -180,34 +149,8 @@
             android:id="@+id/chipGroupChooseSize"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:chipSpacingHorizontal="0dp"
             android:layout_margin="10dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewTableSize"
-            tools:layout_editor_absoluteX="10dp"
-            app:singleSelection="true">
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/xs" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="@string/xl" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="@string/l" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="@string/m" />
+            app:layout_constraintTop_toBottomOf="@id/textViewTableSize">
         </com.google.android.material.chip.ChipGroup>
 
         <Button
