--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -11,20 +11,21 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/gradient">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/imageViewNewClothes2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/splash"
+            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="10dp"
-            android:background="@color/splash"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="5dp">
+            app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
                 android:id="@+id/imageViewNewClothes"
                 android:layout_width="150dp"
@@ -33,7 +34,7 @@
                 android:src="@drawable/jesus"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textViewLabelNew"
@@ -44,12 +45,12 @@
                 android:background="#FF0000"
 
                 android:fontFamily="@font/pt_root_bold"
-                android:visibility="gone"
-
                 android:gravity="center"
+
                 android:text="NEW"
-                android:textSize="24dp"
                 android:textColor="@color/black"
+                android:textSize="24dp"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.cardview.widget.CardView>
@@ -58,8 +59,8 @@
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
             android:text="Название одежды вот такой длины"
             android:textColor="@color/black"
             android:textSize="18dp"
@@ -72,8 +73,8 @@
             android:id="@+id/textViewPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
 
             android:text="1 789₽"
             android:textColor="@color/black"
@@ -83,5 +84,30 @@
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewName" />
+
+
+        <TextView
+            android:id="@+id/add"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:background="@drawable/ic_add_to_cart"
+            android:layout_marginEnd="5dp"
+
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
+            app:layout_constraintEnd_toStartOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:layout_marginEnd="10dp"
+
+            android:background="@drawable/ic_favorite_empty"
+
+            app:layout_constraintTop_toBottomOf="@id/textViewPrice"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
